--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "touch testing app ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "browser-sync start --server --files"
   },
   "author": "Hopchenki Oleksii",
   "license": "ISC",
